// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package org.hiero.block.api;

option java_package = "org.hiero.block.api.protoc";
// <<<pbj.java_package = "org.hiero.block.api">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "services/basic_types.proto";

/**
 * A request for the status of a Block-Node.
 */
message ServerStatusRequest {}

// @todo(1947) This detail API is not yet implemented
/**
 * A response to a server status detail request.
 *
 * This message SHALL provide a client with extended detail information needed
 * to successfully query this Block-Node for a block, stream of blocks, or
 * state snapshot.<br/>
 * This API SHALL provide detailed range information that describes exactly
 * which ranges of blocks are available and which are not. This may be a very
 * large set of data (potentially millions of points in a degenerate case).<br/>
 * A request for blocks within the `available_ranges` SHALL succeed. Any
 * request for blocks outside those ranges MAY fail.<br/>
 * Software version information is provided here to support fine-grain selection
 * of block nodes based on supported features.
 */
message ServerStatusDetailResponse {
  /**
   * Version information.<br/>
   * Versions for the block network address book, block stream protocol
   * buffer schema, and Block-Node software.
   */
  BlockNodeVersions version_information = 1;
}

/**
 * A response to a server status request.
 *
 * This message SHALL provide a client with information needed to successfully
 * query this Block-Node for a block, stream of blocks, or
 * state snapshot.<br/>
 * A request for blocks between `first_available_block` and
 * `last_available_block`, inclusive, SHOULD succeed. Any request for blocks
 * outside that range SHOULD fail.
 */
message ServerStatusResponse {
    /**
     * The lowest numbered block available on this Block-Node.
     * <p>
     * Any request for a block with lower number than this value SHALL fail
     * with a status value indicating and invalid start block number.
     */
    uint64 first_available_block = 1;

    /**
     * The greatest block number available from this Block-Node.
     * <p>
     * Any request for a block with a block number higher than this
     * value MAY fail.
     */
    uint64 last_available_block = 2;

    /**
     * A flag indicating this Block-Node only offers the latest state snapshot.
     * <p>
     * If this value is `true` the client MUST set `retrieve_latest` `true`
     * in any `StateSnapshotRequest` sent to this Block-Node.
     */
    bool only_latest_state = 3;
}

/**
 * Version information for a Block-Node.
 *
 * The `stream_proto_version` SHOULD be an officially released Block Stream
 * version.<br/>
 * The `software_version` SHALL be determined by the implementation of this
 * specification.<br/>
 * The `installed_plugin_versions` SHALL be determined entirely by the plugins
 * themselves, and MAY or MAY NOT be provided by any given plugin.<br/>
 * Regardless if a plugin provides version information, at least the
 * `plugin_id` field SHALL be populated for every registered plugin.
 */
message BlockNodeVersions {
  /**
   * A version of the Block Stream specification.<br/>
   * This is the Stream version currently supported by this Block-Node.
   * <p>
   * Implementations SHOULD make reasonable effort to ensure the latest
   * released Block Stream version is supported.<br/>
   * This version MUST be an officially released Block Stream version if
   * the responding Block-Node is not private.
   */
  proto.SemanticVersion stream_proto_version = 1;

  /**
   * A version of the Block-Node software.<br/>
   * This is the software version that this Block-Node is currently
   * running.
   * <p>
   * This value is implementation-defined.
   */
  proto.SemanticVersion block_node_version = 2;

  /**
   * Version information for each registered plugin.
   * <p>
   * This MAY be empty.<br/>
   * Providing version information is OPTIONAL for each plugin.
   */
  repeated PluginVersion installed_plugin_versions = 3;

  message PluginVersion {
    string plugin_id = 1;
    proto.SemanticVersion plugin_software_version = 2;
    repeated string plugin_feature_names = 3;
  }
}

/**
 * Remote procedure calls (RPCs) for the Block-Node ancillary services.
 */
service BlockNodeService {
  /**
   * Read the status of this Block-Node.
   * <p>
   * A client SHOULD request server status prior to requesting block stream
   * data or a state snapshot.
   */
  rpc serverStatus(ServerStatusRequest) returns (ServerStatusResponse);

  /**
   * Read the status of this Block-Node.
   * <p>
   * A client SHOULD request server status prior to requesting block stream
   * data or a state snapshot.
   */
  rpc serverStatusDetail(ServerStatusRequest) returns (ServerStatusDetailResponse);
}
